carin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carin
  namespace: carin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carin
  template:
    metadata:
      labels:
        app: carin
    spec:
      containers:
        - name: carin
          image: sungjujjang/carin:20260915-191202
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: carin-storage
              mountPath: /app/data

      volumes:
        - name: carin-storage
          persistentVolumeClaim:
            claimName: carin-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: carin-service
  namespace: carin
spec:
  selector:
    app: carin
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
