carin/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: carin-ingress
  namespace: carin
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`carin.sungju.xyz`)
      services:
        - name: carin-service
          port: 8000
